tests/baselines/reference/parserSkippedTokens19.errors.txt
parserSkippedTokens19.ts(1,1): error TS1127: Invalid character.
parserSkippedTokens19.ts(1,15): error TS7005: Variable 'v' implicitly has an 'any' type.


==== parserSkippedTokens19.ts (2 errors) ====
    \ declare var v;
    
!!! error TS1127: Invalid character.
                  ~
!!! error TS7005: Variable 'v' implicitly has an 'any' type.